# verifgradcpp

./: CMakeLists.txt  build.sh  main.cpp
include/: primitives.h
softpositsrc/: quire32_fdp_add.c  quire32_fdp_sub.c  softposit.h
